--- a/config/naivebayes_config.yaml
+++ b/config/naivebayes_config.yaml
@@ -18,6 +18,7 @@ preprocessing:
   skip_tokenization: false
   batch_size: 32
   input_convertor: count_vectorization
+  # input_convertor: tfidf_vectorization
 training:
   learning_rate: 1.0
   dropout_rate: 0.5
@@ -37,10 +38,3 @@ predict:
   calibrator_type: platt_scaling
   calibrators_output_path: ./output
   debug_validation: false
-  classes:
-  - toxic
-  - severe_toxic
-  - obscene
-  - threat
-  - insult
-  - identity_hate
