--- a/config/textrnn_config.yaml
+++ b/config/textrnn_config.yaml
@@ -14,26 +14,26 @@ preprocessing:
   - identity_hate
   input_text_column: comment_text
   input_id_column: id
-  maxlen: 128
+  maxlen: 32
   skip_tokenization: false
   batch_size: 32
-  input_convertor: count_vectorization
-  # input_convertor: tfidf_vectorization
+  input_convertor: nn_vectorization
+  embedding_dim: 100
 training:
-  learning_rate: 1.0
+  learning_rate: 0.8
   dropout_rate: 0.5
   batch_normalization: true
   optimizer: sgd
-  epochs: 1
+  epochs: 3
   gradient_cliping: true
   batch_size: 32
-  embedding_dim: 128
-  maxlen: 128
+  embedding_dim: 100
+  maxlen: 32
   predict_only: false
   output_path: ./output
-  model_name: naivebayes
+  model_name: textrnn
 predict:
-  output_path: ./data/naivebayes_submission.csv
+  output_path: ./data/textrnn_submission.csv
   enable_calibration: false
   calibrator_type: platt_scaling
   calibrators_output_path: ./output
