--- a/config/grucnn_config.yaml
+++ b/config/grucnn_config.yaml
@@ -33,7 +33,7 @@ training:
   model_name: grucnn
 predict:
   output_path: ./data/grucnn_submission.csv
-  enable_calibration: false
+  enable_calibration: true
   calibrator_type: platt_scaling
   calibrators_output_path: ./output
   debug_validation: false
