--- a/config/naivebayes_config.yaml
+++ b/config/naivebayes_config.yaml
@@ -34,7 +34,7 @@ training:
   model_name: naivebayes
 predict:
   output_path: ./data/naivebayes_submission.csv
-  enable_calibration: false
+  enable_calibration: true
   calibrator_type: platt_scaling
   calibrators_output_path: ./output
   debug_validation: false
