--- a/config/textcnn_config.yaml
+++ b/config/textcnn_config.yaml
@@ -2,8 +2,6 @@ preprocessing:
   split_ratio: 0.3
   input_trainset: ./data/train.csv
   input_testset: ./data/test.csv
-  # input_trainset: ./data/mini_train.csv
-  # input_testset: ./data/mini_test.csv
   random_seed: 0
   classes:
   - toxic
@@ -35,7 +33,7 @@ training:
   model_name: textcnn
 predict:
   output_path: ./data/textcnn_submission.csv
-  enable_calibration: false
+  enable_calibration: true
   calibrator_type: platt_scaling
   calibrators_output_path: ./output
   debug_validation: false
