--- a/config/textrnn_config.yaml
+++ b/config/textrnn_config.yaml
@@ -35,7 +35,7 @@ training:
   model_name: textrnn
 predict:
   output_path: ./data/textrnn_submission.csv
-  enable_calibration: false
+  enable_calibration: true
   calibrator_type: platt_scaling
   calibrators_output_path: ./output
   debug_validation: false
